@@ -1,2 +1,4 @@
+# a comment
+  # a comment
 manual split split-dir-manual/
 manual mono   mono-manual.html
