@@ -1,3 +1,8 @@
+2010-06-21   Patrice Dumas  <pertusus@free.fr>
+
+	* texi2html.pl: in htmlxref.cnf, a comment is now ^\s*# instead
+	of # followed by a space anywhere on the line. Report from Karl.
+
 2010-06-20   Patrice Dumas  <pertusus@free.fr>
 
 	* texi2html.pl: set the command name to texi2any when it is not
